[package]
name = "fdtdm_1"
version = "0.1.0"
edition = "2024"

[dependencies]
terminal_size = "0.4.2"

[dependencies.rayon]
version = "1.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"       

[build]
rustflags = [
  "-C", "target-cpu=native",
  "-C", "target-feature=+avx2,+fma,+sse4.1,+sse4.2",
]
